--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ pipeline:
 
 params:
   clustering:
-    method: centroid
+    method: average
     min_cluster_size: 12
     threshold: 0.7045654963945799
   segmentation:
