--- a/nemo/config.yaml
+++ b/nemo/config.yaml
@@ -12,7 +12,7 @@ pipeline:
 
 params:
   clustering:
-    method: average
+    method: centroid
     min_cluster_size: 12
     threshold: 0.7045654963945799
   segmentation:
